# 3d-custom-finite-element-solver

./: .gitignore  README.md  pyproject.toml
examples/: beam_traction.py  bending_refinement.py  convergence_plot.py  convergence_study.py  render_deformed_mesh.py  self_weight_beam.py  uniaxial_tension.py
src/fem3d/: __init__.py  assembly.py  boundary.py  cli.py  demo_cases.py  element.py  material.py  mesh.py  recovery.py  rendering.py  solver.py  types.py  validation.py  vtk.py  workflows.py
tests/: helpers.py  test_contracts.py  test_distorted_patch.py  test_element.py  test_invariants.py  test_mesh.py  test_physical_benchmarks.py  test_recovery.py  test_solver.py  test_validation.py  test_vtk.py
